# advisory-inbox

./: .docs-gate.toml  .gitignore  .mcp.json  .ship.toml  .sos-stack.toml  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json  settings.local.example.json  skills
.claude/agents/: architect.md  boundary-check.md  orchestrator.md  worker.md
.claude/commands/: security-review.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.tools/: runtime-env.allowlist
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  DISCOVERIES.md  ORCHESTRATION.md  PROJECT.md  RULES.md  WORKFLOW.md
docs/discoveries/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P009.md  P010.md  P011.md  P012.md  P013.md
docs/security/: INVARIANTS.md
docs/ticket/: P001-scaffold-cli.md  P002-row-state-types.md  P003-sentinel-parser.md  P004-parse-report.md  P005-dedup.md  P006-append-atomic.md  P007-migrate-state.md  P008-state-backfill.md  P009-scan-and-append.md  P010-mcp-serve.md  P011-mcp-tools.md  P012-polish-publish.md  P013-install-in-tarot.md  TICKET_TEMPLATE.md
scripts/: architect-guard.sh  block-env-edit.sh  block-unsafe-merge.sh  session-start-banner.sh
src/: inbox.rs  main.rs  row.rs  sentinel.rs  state.rs
src/cli/: append.rs  dedup.rs  init.rs  migrate_state.rs  mod.rs  parse_report.rs  scan_and_append.rs  serve.rs  state_backfill.rs
src/mcp/: mod.rs  tools.rs
tests/: append_cli.rs  dedup_cli.rs  mcp_tools_cli.rs  migrate_state_cli.rs  parse_report_cli.rs  scan_and_append_cli.rs  serve_cli.rs  state_backfill_cli.rs
(+10 files in other folders)
