[package]
name = "advisory-inbox"
version = "0.1.0"
edition = "2024"
description = "Advisory inbox state machine — parse agent report, dedup, append, migrate state. Replaces 142-line Bash heredoc slash command. CLI + MCP dual mode."
license = "MIT"
repository = "https://github.com/aspelldenny/advisory-inbox"
homepage = "https://github.com/aspelldenny/advisory-inbox"
keywords = ["security", "advisory", "cve", "inbox", "claude-code"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
anyhow = "1"
thiserror = "2"
tempfile = "3"
regex = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
